snapshots/care/data4life/hc-util-sdk-kmp/error/1.13.0-SNAPSHOT/error-1.13.0-20220822.093702-3.jar.sha256
1fe882e82338dcc8657167445dfe96ca178fb31de757fe428d38d8a2a9f2ee8f